added folder for scan

--- a/notebooks/Obtain-BRs.ipynb
+++ b/notebooks/Obtain-BRs.ipynb
@@ -10,7 +10,16 @@
      "start_time": "2023-09-26T16:22:09.455767Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/b3/l10x2d9503j4vrszk86wqw040000gn/T/ipykernel_75681/769306036.py:32: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "  cm = plt.cm.get_cmap('RdYlBu')\n"
+     ]
+    }
+   ],
    "source": [
     "#### In this notebook I obtain the branching ratio for the processes zp -> chi chi, \n",
     "#### y0 -> chi chi, and h2 -> chi chi, and store the results in a dataframe that\n",
@@ -26,7 +35,7 @@
     "from scipy.interpolate import LinearNDInterpolator,interp2d\n",
     "import scipy\n",
     "import matplotlib as mpl\n",
-    "import sympy as sp\n",
+    "# import sympy as sp\n",
     "from matplotlib.colors import LogNorm\n",
     "\n",
     "\n",
@@ -313,8 +322,8 @@
        "</div>"
       ],
       "text/plain": [
-       "     Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
-       "0      spin-1        140     0.01           NaN         0.1         NaN   \n",
+       "     Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$   \n",
+       "0      spin-1        140     0.01           NaN         0.1         NaN  \\\n",
        "1      spin-1        150     0.01           NaN         0.1         NaN   \n",
        "2      spin-1        160     0.01           NaN         0.1         NaN   \n",
        "3      spin-1        170     0.01           NaN         0.1         NaN   \n",
@@ -645,8 +654,8 @@
        "</div>"
       ],
       "text/plain": [
-       "     Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
-       "0      spin-1        140     0.01           NaN         0.1         NaN   \n",
+       "     Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$   \n",
+       "0      spin-1        140     0.01           NaN         0.1         NaN  \\\n",
        "1      spin-1        150     0.01           NaN         0.1         NaN   \n",
        "2      spin-1        160     0.01           NaN         0.1         NaN   \n",
        "3      spin-1        170     0.01           NaN         0.1         NaN   \n",
@@ -681,6 +690,482 @@
    ],
    "source": [
     "BRdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "58280f46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mediator</th>\n",
+       "      <th>$m_{med}$</th>\n",
+       "      <th>$g_{q}$</th>\n",
+       "      <th>$\\sin\\alpha$</th>\n",
+       "      <th>$g_{\\chi}$</th>\n",
+       "      <th>$y_{\\chi}$</th>\n",
+       "      <th>$BR(med&gt;\\chi\\chi)$</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.730468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.985455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.996324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>947</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.998363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1234</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.999078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1521</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.026386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1808</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.403887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2095</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.730468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2382</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.859111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2669</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.915544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2956</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.006730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3243</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.144848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3530</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.403887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3817</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.603874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4104</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.730468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4391</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.004317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4678</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.097803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4965</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.302466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5252</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.493837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5539</th>\n",
+       "      <td>spin-1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.634300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5826</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.013642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5972</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.256931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6118</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.580375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6264</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.756805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6410</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.846915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6556</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.003352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6702</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.077560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6848</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.251680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6994</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.430762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7140</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.573616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7286</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.002109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7432</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.050188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7578</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.174480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7724</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.322289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7870</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.458121</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$   \n",
+       "86     spin-1       1000     0.01           NaN         0.1         NaN  \\\n",
+       "373    spin-1       1000     0.01           NaN         0.5         NaN   \n",
+       "660    spin-1       1000     0.01           NaN         1.0         NaN   \n",
+       "947    spin-1       1000     0.01           NaN         1.5         NaN   \n",
+       "1234   spin-1       1000     0.01           NaN         2.0         NaN   \n",
+       "1521   spin-1       1000     0.10           NaN         0.1         NaN   \n",
+       "1808   spin-1       1000     0.10           NaN         0.5         NaN   \n",
+       "2095   spin-1       1000     0.10           NaN         1.0         NaN   \n",
+       "2382   spin-1       1000     0.10           NaN         1.5         NaN   \n",
+       "2669   spin-1       1000     0.10           NaN         2.0         NaN   \n",
+       "2956   spin-1       1000     0.20           NaN         0.1         NaN   \n",
+       "3243   spin-1       1000     0.20           NaN         0.5         NaN   \n",
+       "3530   spin-1       1000     0.20           NaN         1.0         NaN   \n",
+       "3817   spin-1       1000     0.20           NaN         1.5         NaN   \n",
+       "4104   spin-1       1000     0.20           NaN         2.0         NaN   \n",
+       "4391   spin-1       1000     0.25           NaN         0.1         NaN   \n",
+       "4678   spin-1       1000     0.25           NaN         0.5         NaN   \n",
+       "4965   spin-1       1000     0.25           NaN         1.0         NaN   \n",
+       "5252   spin-1       1000     0.25           NaN         1.5         NaN   \n",
+       "5539   spin-1       1000     0.25           NaN         2.0         NaN   \n",
+       "5826   spin-0       1000      NaN          0.10         NaN         0.1   \n",
+       "5972   spin-0       1000      NaN          0.10         NaN         0.5   \n",
+       "6118   spin-0       1000      NaN          0.10         NaN         1.0   \n",
+       "6264   spin-0       1000      NaN          0.10         NaN         1.5   \n",
+       "6410   spin-0       1000      NaN          0.10         NaN         2.0   \n",
+       "6556   spin-0       1000      NaN          0.20         NaN         0.1   \n",
+       "6702   spin-0       1000      NaN          0.20         NaN         0.5   \n",
+       "6848   spin-0       1000      NaN          0.20         NaN         1.0   \n",
+       "6994   spin-0       1000      NaN          0.20         NaN         1.5   \n",
+       "7140   spin-0       1000      NaN          0.20         NaN         2.0   \n",
+       "7286   spin-0       1000      NaN          0.25         NaN         0.1   \n",
+       "7432   spin-0       1000      NaN          0.25         NaN         0.5   \n",
+       "7578   spin-0       1000      NaN          0.25         NaN         1.0   \n",
+       "7724   spin-0       1000      NaN          0.25         NaN         1.5   \n",
+       "7870   spin-0       1000      NaN          0.25         NaN         2.0   \n",
+       "\n",
+       "      $BR(med>\\chi\\chi)$  \n",
+       "86              0.730468  \n",
+       "373             0.985455  \n",
+       "660             0.996324  \n",
+       "947             0.998363  \n",
+       "1234            0.999078  \n",
+       "1521            0.026386  \n",
+       "1808            0.403887  \n",
+       "2095            0.730468  \n",
+       "2382            0.859111  \n",
+       "2669            0.915544  \n",
+       "2956            0.006730  \n",
+       "3243            0.144848  \n",
+       "3530            0.403887  \n",
+       "3817            0.603874  \n",
+       "4104            0.730468  \n",
+       "4391            0.004317  \n",
+       "4678            0.097803  \n",
+       "4965            0.302466  \n",
+       "5252            0.493837  \n",
+       "5539            0.634300  \n",
+       "5826            0.013642  \n",
+       "5972            0.256931  \n",
+       "6118            0.580375  \n",
+       "6264            0.756805  \n",
+       "6410            0.846915  \n",
+       "6556            0.003352  \n",
+       "6702            0.077560  \n",
+       "6848            0.251680  \n",
+       "6994            0.430762  \n",
+       "7140            0.573616  \n",
+       "7286            0.002109  \n",
+       "7432            0.050188  \n",
+       "7578            0.174480  \n",
+       "7724            0.322289  \n",
+       "7870            0.458121  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BRdata[BRdata['$m_{med}$']==1000]"
    ]
   },
   {
@@ -723,7 +1208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
