--- a/notebooks/2MDM-monojet-vs-dijet-default-couplings.ipynb
+++ b/notebooks/2MDM-monojet-vs-dijet-default-couplings.ipynb
@@ -22,9 +22,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b3/l10x2d9503j4vrszk86wqw040000gn/T/ipykernel_22172/1200496628.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "/var/folders/b3/l10x2d9503j4vrszk86wqw040000gn/T/ipykernel_95260/1200496628.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
       "  import glob,imp,os,shutil\n",
-      "/var/folders/b3/l10x2d9503j4vrszk86wqw040000gn/T/ipykernel_22172/1200496628.py:36: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "/var/folders/b3/l10x2d9503j4vrszk86wqw040000gn/T/ipykernel_95260/1200496628.py:36: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
       "  cm = plt.cm.get_cmap('RdYlBu')\n"
      ]
     }
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create txname/process translator"
+    "#### Convert ID labels"
    ]
   },
   {
@@ -87,13 +87,7 @@
    },
    "outputs": [],
    "source": [
-    "processDict = {'TRV1tt' : r'$p p \\to \\bar{t} t$',\n",
-    "               'TRV1jj' : r'$p p \\to j j$',\n",
-    "               'TRV1bb' : r'$p p \\to \\bar{b} b$',\n",
-    "               'TRV1qq' : r'$p p \\to \\bar{q} q$',\n",
-    "               'TRV1' : r'$p p \\to \\chi \\chi$',\n",
-    "               'TRS1' : r'$p p \\to \\chi \\chi$',\n",
-    "               'ATLAS-SUSY-2018-22-multibin' : 'ATLAS-SUSY-2018-22'}\n",
+    "processDict = {'ATLAS-SUSY-2018-22-multibin' : 'ATLAS-SUSY-2018-22'}\n",
     "def convertLabel(label):\n",
     "    newlabel = label[:]\n",
     "    #Replace txnames by process\n",
@@ -534,22 +528,7 @@
     "newDF['excluded'] = newDF['ExptRes.result.r'] > 1.0\n",
     "excluded = newDF[newDF['excluded'] == True]\n",
     "anas = excluded['ExptRes.result.AnalysisID'].value_counts()\n",
-    "anas.sort_values(inplace=True,ascending=False)\n",
-    "\n",
-    "    \n",
-    "labels = []\n",
-    "for index, row in excluded.iterrows():\n",
-    "    ana = row['ExptRes.result.AnalysisID']\n",
-    "    label = ana \n",
-    "    labels.append(label)\n",
-    "excluded['label'] = labels\n",
-    "\n",
-    "labels = []\n",
-    "for index, row in newDF.iterrows():\n",
-    "    ana = row['ExptRes.result.AnalysisID']\n",
-    "    label = ana \n",
-    "    labels.append(label)\n",
-    "newDF['label'] = labels"
+    "anas.sort_values(inplace=True,ascending=False)"
    ]
   },
   {
@@ -574,7 +553,7 @@
     }
    ],
    "source": [
-    "excluded['label'].unique()"
+    "excluded['ExptRes.result.AnalysisID'].unique()"
    ]
   },
   {
@@ -587,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-31T14:50:02.834599Z",
@@ -596,12 +575,12 @@
    },
    "outputs": [],
    "source": [
-    "colors = sns.color_palette(\"hls\",len(excluded['label'].unique()))\n"
+    "colors = sns.color_palette(\"hls\",len(excluded['ExptRes.result.AnalysisID'].unique()))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-31T14:50:03.251524Z",
@@ -612,13 +591,13 @@
    "source": [
     "colorDict = {}\n",
     "\n",
-    "for i, l in enumerate(excluded['label'].unique()):\n",
+    "for i, l in enumerate(excluded['ExptRes.result.AnalysisID'].unique()):\n",
     "    colorDict[l] = 'purple'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-31T14:50:04.782005Z",
@@ -643,26 +622,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['CMS-EXO-19-012'], dtype=object)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "excluded['label'].unique()"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -672,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -719,10 +678,10 @@
     "plt.tricontourf(pts[:,0],pts[:,1], rPts, levels=[1.0, max(rPts)], alpha=0.7, colors=colorDict['ATLAS-SUSY-2018-22-multibin,CMS-EXO-20-004'])\n",
     "\n",
     "\n",
-    "for label in excluded['label'].unique():\n",
+    "for label in excluded['ExptRes.result.AnalysisID'].unique():\n",
     "    # if 'ATLAS-SUSY-2018-22 ' in label: continue\n",
     "    print(label)\n",
-    "    data = newDF[(newDF['extpar.1']==gchi)&(newDF['extpar.2']==gqv) & (newDF['label']==label)]\n",
+    "    data = newDF[(newDF['extpar.1']==gchi)&(newDF['extpar.2']==gqv) & (newDF['ExptRes.result.AnalysisID']==label)]\n",
     "    rData = data['ExptRes.result.r']\n",
     "    pts = np.array([y for y in product(np.linspace(200.,4100.,300),np.linspace(0.,2000.,300))])\n",
     "    rPts = griddata(list(zip(data['mass.9900032'],data['mass.9000006'])),rData,pts)\n",
@@ -733,7 +692,6 @@
     "\n",
     "    \n",
     "\n",
-    "    \n",
     "    \n",
     "plt.axline((1, 1), slope=1/2, linestyle='--', color='gray')\n",
     "plt.legend(handles=[legend[0], legend[1]], fontsize=20, loc='upper left')\n",
@@ -766,7 +724,7 @@
     "plt.grid()\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig('./figures/monojet-dijet-default-couplings.png')\n",
+    "# plt.savefig('./figures/monojet-dijet-default-couplings.png')\n",
     "plt.show()"
    ]
   },
