Added DMconstraints summary

--- a/notebooks/plots-2MDM-DMconstraints_scan1.ipynb
+++ b/notebooks/plots-2MDM-DMconstraints_scan1.ipynb
@@ -29,7 +29,7 @@
     "import seaborn as sns\n",
     "from scipy.interpolate import griddata,interp1d\n",
     "from itertools import product\n",
-    "from auxPlots import atlasCurve1,atlasCurve2,LZlimit,sigmaz_gev\n",
+    "from auxPlots import atlasCurve1,LZlimit,sigmaz_gev,readMadDMsummary\n",
     "import pyslha\n",
     "\n",
     "plt.rcParams.update({\n",
@@ -79,21 +79,7 @@
    "source": [
     "scanLabel = 'scan1'\n",
     "scanSummary = os.path.join('../data/maddmOutput/',scanLabel,'output/scan_run_01.txt')\n",
-    "with open(scanSummary,'r') as f:\n",
-    "    headerLines = [l for l in f.readlines() if l.strip() and l.strip()[0] == '#']\n",
-    "columnLabels = {eval(re.sub(r'\\b0', '',h.split(':')[0].replace('[','').replace(']','').replace('#',''))) : \n",
-    "                     h.split(':')[1].replace('\\n','').strip().replace('%','pc') for h in headerLines}\n",
-    "header = ['']*len(columnLabels)\n",
-    "for i,label in columnLabels.items():\n",
-    "    header[i-1] = label\n",
-    "relicData = pd.read_csv(scanSummary,names=header,\n",
-    "                        comment='#',delimiter='\\t',index_col=False)\n",
-    "# Remove unused columns:\n",
-    "relicData.drop(columns=[c for c in relicData.columns if 'pc_relic' in c]+['Nevents','smearing','xsi','x_f','sigmav(xf)'],inplace=True)\n",
-    "# Rename columns:\n",
-    "renameDict = {'Omegah^2' : 'Omegah2', 'mass#9000006' : 'mChi', 'mass#9900032' : 'mZp', 'mass#9900026' : 'mS'}\n",
-    "relicData.rename(columns=renameDict,inplace=True)\n",
-    "print(relicData.columns)"
+    "relicData = readMadDMsummary(scanSummary)"
    ]
   },
   {
