Updated data folder. Fixed paths

--- a/notebooks/2MDM-scan-parameters.ipynb
+++ b/notebooks/2MDM-scan-parameters.ipynb
@@ -76,7 +76,7 @@
    ],
    "source": [
     "#Merge with SModelS DataFrame\n",
-    "pclFile = '../data/smodelsOutput/smodels_results_final.pcl'\n",
+    "pclFile = '../data/smodels_results.pcl'\n",
     "dataDF = pd.read_pickle(pclFile)\n",
     "print(len(dataDF))"
    ]
