--- a/notebooks/2MDM-monojet-default-couplings.ipynb
+++ b/notebooks/2MDM-monojet-default-couplings.ipynb
@@ -124,7 +124,7 @@
    ],
    "source": [
     "#Merge with SModelS DataFrame\n",
-    "pclFiles = ['../data/smodelsOutput/smodels_results_final.pcl']\n",
+    "pclFiles = ['../data/smodels_results.pcl']\n",
     "dfs = [pd.read_pickle(i) for i in pclFiles]\n",
     "dataDF = pd.concat(dfs, ignore_index=True)\n",
     "print(dataDF.columns.values.tolist()) #Print all columns names"
@@ -910,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
