--- a/notebooks/2MDM-monojet-vs-dijet-combined.ipynb
+++ b/notebooks/2MDM-monojet-vs-dijet-combined.ipynb
@@ -97,7 +97,7 @@
    ],
    "source": [
     "#Merge with SModelS DataFrame\n",
-    "pclFiles = ['../data/smodelsOutput/smodels_results_final.pcl']\n",
+    "pclFiles = ['../data/smodels_results.pcl']\n",
     "# pclFiles = ['./smodels_results_slha_gchi_001.pcl']\n",
     "dfs = [pd.read_pickle(i) for i in pclFiles]\n",
     "dataDF = pd.concat(dfs, ignore_index=True)\n",
